--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                                     <a href="index.html#abt">About</a>
                                 </li>
                                  <li>
-                                    <a href="knowledge-center.html">Knowledge Center</a>
+                                    <a href="#">Knowledge Center</a>
                                 </li> 
 
                                 <li>
-                                    <a href="calculator.html#side-bar">Team</a>
+                                    <a href="index.html#teams">Team</a>
                                 </li>
                                 <li>
                                     <a href="gallery.html#portfolio">Gallery</a>
