--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 </li> 
 
                                 <li>
-                                    <a href="index.html#teams">Team</a>
+                                    <a href="index.html#team">Team</a>
                                 </li>
                                 <li>
                                     <a href="gallery.html#portfolio">Gallery</a>
