--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         
                         <!-- Slide 1 -->
                         <div class="teams-slides col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">
-                         <div class="vertical flip-container" ontouchstart="this.classList.toggle('hover');">
+                         <div class="vertical flip-container" ontouchstart="this.classList.toggle('hover');" onclick="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <!-- front content -->
                                 <div class="front">
@@ -232,7 +232,7 @@
                        </div>
                        <!-- Slide 2 -->
                         <div class="teams-slides col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">
-                         <div class="vertical flip-container" ontouchstart="this.classList.toggle('hover');">
+                         <div class="vertical flip-container" ontouchstart="this.classList.toggle('hover');" onclick="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <!-- front content -->
                                 <div class="front">
