--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <div class="col-md-12 col-sm-12 col-xs-12 section-header wow fadeInDown">
                         <h2><span class="highlight-text-inverted">TEAM</span></h2>
                        
-                        <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+                        <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">We are a small team of volunteers who have knowledge and experstise in diverse fields to keep up with the requirement of our small but effective soceity.</p>
                     </div>
                     <!-- teams Slider -->
                     <div id="teams" class="owl-carousel teams">
@@ -281,9 +281,7 @@
                                 </div>
                                 <div class="back">
                                     <div class="back-inner" style="">
-                                        <p>
-                                            <b>Shubham Jaiswal</b> nicknamed "piku" is our all time media head and part time technical guru. He is a fullstack developer who is currently intrested in machine learning.<br>
-                                            &nbsp Our media head loves exploring and travelling with friends. If you need any help feel free to contact him because he loves helping others.
+                                        <p>Miss prgaya is our mini package of cs expertise who specializes in various programming languages. Always around with the best ideas, she is a cute package of beauty and brains.
                                         </p>
                                     </div>
                                 </div>
@@ -305,8 +303,7 @@
                                 <div class="back">
                                     <div class="back-inner" style="">
                                         <p>
-                                            <b>Shubham Jaiswal</b> nicknamed "piku" is our all time media head and part time technical guru. He is a fullstack developer who is currently intrested in machine learning.<br>
-                                            &nbsp Our media head loves exploring and travelling with friends. If you need any help feel free to contact him because he loves helping others.
+                                            <b>Miss prgaya</b> is our mini package of cs expertise who specializes in various programming languages. Always around with the best ideas, she is a cute package of beauty and brains.
                                         </p>
                                     </div>
                                 </div>
@@ -323,13 +320,12 @@
                                     <div class="front-inner" style="background-image:url(images/img-teams/aryan.jpeg);">
                                     </div>
                                    <h3>Vice President</h3>
-                                   <h4><i>Kumar Anurag Singh</i></h4>
+                                   <h4><i>Kumar Aryan Singh</i></h4>
                                 </div>
                                 <div class="back">
                                     <div class="back-inner" style="">
                                         <p>
-                                            <b>Shubham Jaiswal</b> nicknamed "piku" is our all time media head and part time technical guru. He is a fullstack developer who is currently intrested in machine learning.<br>
-                                            &nbsp Our media head loves exploring and travelling with friends. If you need any help feel free to contact him because he loves helping others.
+                                            <b>Miss prgaya</b> is our mini package of cs expertise who specializes in various programming languages. Always around with the best ideas, she is a cute package of beauty and brains.
                                         </p>
                                     </div>
                                 </div>
@@ -374,8 +370,7 @@
                                 <div class="back">
                                     <div class="back-inner" style="">
                                         <p>
-                                            <b>Shubham Jaiswal</b> nicknamed "piku" is our all time media head and part time technical guru. He is a fullstack developer who is currently intrested in machine learning.<br>
-                                            &nbsp Our media head loves exploring and travelling with friends. If you need any help feel free to contact him because he loves helping others.
+                                            <b>Miss prgaya</b> is our mini package of cs expertise who specializes in various programming languages. Always around with the best ideas, she is a cute package of beauty and brains.
                                         </p>
                                     </div>
                                 </div>
