--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                 <div class="back">
                                     <div class="back-inner" style="">
                                         <p>
-                                          our esteemed president <b>Anurag Kumar</b> is known for his leadership skills. He might not have techinacal insights but he brings to the table his great communication skills. <br>
+                                          Our esteemed president <b>Anurag Kumar</b> is known for his leadership skills. He might not have technical insights but he brings to the table his great communication skills. <br>
                                           &nbsp A people's person our president loves spending and having a good time with his friends. 
                                         </p>
                                     </div>
@@ -281,7 +281,7 @@
                                 </div>
                                 <div class="back">
                                     <div class="back-inner" style="">
-                                        <p>Miss prgaya is our mini package of cs expertise who specializes in various programming languages. Always around with the best ideas, she is a cute package of beauty and brains.
+                                        <p>Miss <b>Pragya</b> is our mini package of cs expertise who specializes in various programming languages. Always around with the best ideas, she is a cute package of beauty and brains.
                                         </p>
                                     </div>
                                 </div>
@@ -303,7 +303,7 @@
                                 <div class="back">
                                     <div class="back-inner" style="">
                                         <p>
-                                            <b>Miss prgaya</b> is our mini package of cs expertise who specializes in various programming languages. Always around with the best ideas, she is a cute package of beauty and brains.
+                                            <b>Ayesha Ayub</b> is our technical head who specializes in full stack development and currently working on broading her horizons. She is good in multiple programming languages and has great communication skills.
                                         </p>
                                     </div>
                                 </div>
@@ -325,7 +325,7 @@
                                 <div class="back">
                                     <div class="back-inner" style="">
                                         <p>
-                                            <b>Miss prgaya</b> is our mini package of cs expertise who specializes in various programming languages. Always around with the best ideas, she is a cute package of beauty and brains.
+                                            <b>Aryan</b> is the go to guy of our soecity. Our vp is one of the most jovial person you will ever come across. A great person with great communication and good leadership skills he is always willing to help anyone who is in need of help. 
                                         </p>
                                     </div>
                                 </div>
@@ -370,7 +370,7 @@
                                 <div class="back">
                                     <div class="back-inner" style="">
                                         <p>
-                                            <b>Miss prgaya</b> is our mini package of cs expertise who specializes in various programming languages. Always around with the best ideas, she is a cute package of beauty and brains.
+                                            <b>Supriya Jaiswal</b> is one of the most responsible person you will ever meet and hence the treasurer of our society. She is an adventorous person who will always meet up with you to hang out.
                                         </p>
                                     </div>
                                 </div>
@@ -414,8 +414,7 @@
                                 <div class="back">
                                     <div class="back-inner" style="">
                                         <p>
-                                            <b>Shubham Jaiswal</b> nicknamed "piku" is our all time media head and part time technical guru. He is a fullstack developer who is currently intrested in machine learning.<br>
-                                            &nbsp Our media head loves exploring and travelling with friends. If you need any help feel free to contact him because he loves helping others.
+                                            <b>Vibhuti</b> is a cute fun loving individual ho is always there to provide her skills and witty remarks to anyone who is in need of it. She is a cheerful bomb of happiness and makes everyone around her light up with smiles.
                                         </p>
                                     </div>
                                 </div>
